--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <link rel="stylesheet" href="index.css">
         <link href="https://fonts.cdnfonts.com/css/cursed-timer-ulil"
-      rel="stylesheet"
+      rel="stylesheet">
     </head>
     <body>
         <div class="container">
