--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
                 <h3>HOME</h3>
                 <h2 class="score" id="home-score">0</h2>
                 <div>
-                    <button id="home1">+1</button>
-                    <button id="home2">+2</button>
-                    <button id="home3">+3</button>
+                    <button id="home1" data-home="1">+1</button>
+                    <button id="home2" data-home="2">+2</button>
+                    <button id="home3" data-home="3">+3</button>
                 </div>
             </section>
             <section class="scoreboard" id="guest-scoreboard">
                 <h3>GUEST</h3>
                 <h2 class="score" id="guest-score">0</h2>
                 <div>
-                    <button id="guest1">+1</button>
-                    <button id="guest2">+2</button>
-                    <button id="guest3">+3</button>
+                    <button id="guest1" data-guest="1">+1</button>
+                    <button id="guest2" data-guest="2">+2</button>
+                    <button id="guest3" data-guest="3">+3</button>
                 </div>
             </section>
         </div>
