--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </section>
         </div>
-        <button id="reset-btn">Reset</button>
+        <button class="reset-btn" id="reset-btn">Reset</button>
         <script src="index.js"></script>
     </body>
 </html>
